--- a/app/views/modals/_user_profile_modal.html.haml
+++ b/app/views/modals/_user_profile_modal.html.haml
@@ -20,9 +20,13 @@
                     = link_to( edit_user_registration_path, class: "btn" ) do
                         %i.fa-solid.fa-user
                         Edit Profile
-                    %button.btn{"data-bs-target": "#preferenceModal", "data-bs-toggle": "modal", "data-bs-dismiss": "modal"}
+                    %button.btn.text-success{"data-bs-target": "#preferenceModal", "data-bs-toggle": "modal", "data-bs-dismiss": "modal"}
                         %i.fa-solid.fa-bone
                         Add preference
+                    %button.btn.text-warning{"data-bs-target": "#removepreferenceModal", "data-bs-toggle": "modal", "data-bs-dismiss": "modal"}
+                        %i.fa-solid.fa-square-minus
+                        Remove preference
             .modal-footer 
                 %button.btn.btn-secondary{'data-bs-dismiss': 'modal'} Close
 = render 'modals/preference_modal'
+= render 'modals/remove_preference_modal'
