--- a/app/views/channels/_channel.html.haml
+++ b/app/views/channels/_channel.html.haml
@@ -1,2 +1,3 @@
-%div
-    =link_to channel.name, channel
+- if current_user.user_preferences.include?(channel.name)
+    %div
+        =link_to channel.name, channel
