--- a/app/views/channels/index.html.haml
+++ b/app/views/channels/index.html.haml
@@ -2,16 +2,15 @@
     %div#side_panel.col-md-4.col-sm-4
 
         %h5
-            = current_user.email
+            = complete_name(current_user)
 
-        %h4 Users
+        %h4 Friends
         = turbo_stream_from "users"
 
         %div#users
             = render @users
 
-        %h4 Channels
-        = render 'channels/new_channel_form'
+        %h4 Group Chat
         = turbo_stream_from "channels"
 
         %div#channels
@@ -21,7 +20,7 @@
         - if @single_channel
             %div#single_channel
             %h4.text-center
-                = @user&.email || @single_channel.name
+                = complete_name(@user) || "#{@single_channel.name} Group"
                 = turbo_stream_from @single_channel
                 %div#messages
                     = render @messages
