--- a/app/views/posts/_post_left_panel.html.haml
+++ b/app/views/posts/_post_left_panel.html.haml
@@ -1,20 +1,24 @@
 .d-flex.flex-column.mt-5.container
     = link_to( view_profile_path(current_user), class: "text-decoration-none text-secondary mb-3 h5") do
         .d-flex.align-items-center
-            %i.fa-solid.fa-user{style: 'margin-right: 10px;'}
-            = "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize}"
-    = link_to( channels_path, class: 'text-decoration-none text-secondary mb-3 h5') do
-        .d-flex.align-items-center
-            %i.fa-solid.fa-envelope{style: 'margin-right: 10px;'}
-            Messages
-    = link_to( view_friends_path, class: 'text-decoration-none text-secondary mb-3 h5') do
-        .d-flex.align-items-center
-            %i.fa-solid.fa-user-group{style: 'margin-right: 10px;'}
-            Friends
-    %h5.mt-2.mb-2 Groups
+            %i.fa-solid.fa-dog{style: 'margin-right: 5px;'}
+            = "#{@breed.name}"
+
+    - unless current_user.friends.empty?
+        %h5.mt-2.mb-2 Friends
+        %div.container{style: 'margin-top: 10px;'}
+            - current_user.friends.each do |friend|
+                - if preferred?(@breed.name, Friend.user(friend))
+                    .d-flex.align-items-center.mb-1.text-secondary
+                        %button.btn.text-secondary
+                            %i.fa-solid.fa-user{style: 'margin-right: 10px;'}
+                            = link_to "#{complete_name(Friend.user(friend))}", user_message_path(friend.friend_id)
+
+    %h5.mt-2.mb-2 Users
     %div.container{style: 'margin-top: 10px;'}
-        - current_user.user_preferences.each do |dog|
-            .d-flex.align-items-center.mb-1.text-secondary
-                %h5
-                    %i.fa-solid.fa-dog{style: 'margin-right: 5px;'}
-                    = dog
+        - @users.each do |user|
+            - if find_friend(user).nil? && preferred?(@breed.name, user) && current_user.id != user.id
+                .d-flex.align-items-center.mb-1.text-secondary
+                    %button.btn.text-secondary
+                        %i.fa-solid.fa-user{style: 'margin-right: 10px;'}
+                        = link_to "#{complete_name(user)}", user_message_path(user.id)
