--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -12,7 +12,7 @@
                 %tr
                     %th{scope: 'row'}= user.id
                     %td= "#{user.first_name} #{user.last_name}"
-                    %td= user.sex
+                    %td= user.sex.capitalize
                     %td= user.created_at.strftime('%B %m, %Y')
                     %td.d-flex.justify-content-center
                         = link_to('View Profile', view_profile_path(user), class: 'btn btn-sm btn-primary')
