--- a/app/views/errors/banned.html.haml
+++ b/app/views/errors/banned.html.haml
@@ -9,4 +9,4 @@
             .planet 
                 = image_tag 'http://orig02.deviantart.net/69ab/f/2013/106/0/4/sad_man_by_agiq-d61wk0d.png', alt: 'planet', height: '200px'
     %div.button
-        = button_to('Sign Out', destroy_user_session_path, class: 'btn border-0 text-light w-100', method: :delete)
+        = button_to('Sign Out', destroy_user_session_path, class: 'btn border-0 text-light w-100 fw-bolder', method: :delete)
