--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -1,7 +1,7 @@
-.container-fluid.px-3.d-flex
+.container-fluid.px-3.d-flex.justify-content-center
     .col-md-3
         = render 'pages/left_panel'
-    .col-md-6.bg-secondary.vh-100
+    .col-md-4.bg-secondary.vh-100
         NEWS FEED
     .col-md-3
         = render 'pages/right_panel'
