--- a/app/views/modals/_pending_modal.html.haml
+++ b/app/views/modals/_pending_modal.html.haml
@@ -11,7 +11,9 @@
                 %ul.list-group
                     - pending_friends().each do |user|
                         %li.list-group-item.d-flex.justify-content-between.align-items-center
-                            %span= "#{user.first_name} #{user.last_name}"
+                            %div
+                                = image_tag "#{user.image_url}", style: "max-width: 50px;", class: 'rounded-circle'
+                                %span.h6{style: 'margin-left: 5px;'}= "#{user.first_name.capitalize} #{user.last_name.capitalize}"
                             %div.d-flex.align-items-center.justify-content-between
                                 = button_to("Accept", accept_path(user.id), class: "btn btn-success", style: "margin-right: 5px")
                                 = button_to("Decline", decline_path(user.id), class: "btn btn-danger")
