--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,19 +1,19 @@
-%div{ id:"post_#{post.id}", class:"post" }
-    %h3= post.body
-    = button_to "Delete Post", breed_post_path(post.breed.id, post.id), method: :delete
-
-    = render 'posts/edit_post_modal', post: post    
-      
-    %div{ id:"post_#{post.id}_comments" }
-        = render post.comments, post: post
-    = render 'comments/new_comment_form', post: post
-
-.card{:style => "width: 18rem;", id:"post_#{post.id}", class:"post"}
+.card{id:"post_#{post.id}", class:"post"}
     .card-body
-        %h5.card-title 
+        %h5.card-title.d-flex.justify-content-between
             = complete_name(post.user)
-        %h6.card-subtitle.mb-2.text-muted
-            = post.breed.name
-        %p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.
-        %a.card-link{:href => "#"} Card link
-        %a.card-link{:href => "#"} Another link
+            - if @user == post.user.id
+                = render 'posts/edit_post_modal', post: post             
+        %h6.card-subtitle.mb-2.text-muted.fs-6
+            = "#{post.breed.name} Community"
+        %p.card-text.fs-4 #{post.body}
+        
+        %ul.list-group.list-group-flush                
+            %li.list-group-item
+                .d-flex.flex-row.justify-content-around
+                    %p.my-0
+                        = "#{post.likes} Likes"
+                    = render 'comments/comment_count', post: post
+        %div{id: "post_#{post.id}_comments"}
+            = render post.comments, post: post
+        = render 'comments/new_comment_form', post: post
