--- a/app/views/comments/_new_comment_form.html.haml
+++ b/app/views/comments/_new_comment_form.html.haml
@@ -1,7 +1,9 @@
-%div.form-group.comment-form
-    = form_with(model: [post.breed, post, post.comments.new],
+%div.form-group.comment-form{id: "new-comment-form#{post.id}"}
+    = form_with(model: [post.breed, post, post.comments.new], id: "comment-form-id",
     data: {controller: "reset-form", action: "turbo:submit-end->reset-form#reset"}) do |f|
-        = f.hidden_field :user_id, value: @user&.id
+        - unless defined?(saved_id)
+            - saved_id = @user
+        = f.hidden_field :user_id, value: saved_id
         = f.hidden_field :post_id, value: post.id
-        = f.text_field :body, class:"form-control", autocomplete: 'off'
-        = f.submit data: {disable_with: false}, class:'btn btn-primary'
+        = f.text_field :body, class:"form-control", autocomplete: 'off', placeholder: "Write a comment..."
+        = f.submit data: {disable_with: false, class:'btn btn-primary'}, style: "display: none"
