--- a/app/views/pages/_left_panel.html.haml
+++ b/app/views/pages/_left_panel.html.haml
@@ -15,6 +15,7 @@
         %h6.mt-2.mb-2 Groups
         .container.d-flex.flex-column.align-items-start.mb-1.text-secondary.mt-2
             - current_user.user_preferences.each do |dog|
-                %button.btn.text-secondary
-                    %i.fa-solid.fa-dog
-                    = dog
+                = link_to( breed_posts_path(Breed.find_by(name: dog).id), class: 'text-decoration-none text-secondary btn h6 m-0') do
+                    .d-flex.align-items-center
+                        %i.fa-solid.fa-dog
+                        = dog
