--- a/app/views/pages/_right_panel.html.haml
+++ b/app/views/pages/_right_panel.html.haml
@@ -3,13 +3,15 @@
     .container.mt-4
         Friends
         .container.my-2
-            - all_friends().each do |user|
-                %button.btn.text-secondary
-                    %i.fa-solid.fa-user
-                    = "#{user.first_name} #{user.last_name}"
+            - current_user.friends.each do |user|
+                = link_to( user_message_path(user.friend_id), class: 'text-decoration-none text-secondary btn h6 m-0') do
+                    .d-flex.align-items-center
+                        %i.fa-solid.fa-user
+                        = complete_name(Friend.user(user))
         Group Chat
         .container.mt-2.d-flex.flex-column.align-items-start
             - current_user.user_preferences.each do |dog|
-                %button.btn.text-secondary
-                    %i.fa-solid.fa-paw
-                    = dog
+                = link_to( "/channels/#{Channel.find_by(name: dog).id}", class: 'text-decoration-none text-secondary btn h6 m-0') do
+                    .d-flex.align-items-center
+                        %i.fa-solid.fa-dog
+                        = dog
