--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,4 +1,4 @@
-.card{id:"post_#{post.id}", class:"post"}
+.card.m-2{id:"post_#{post.id}", class:"post shadow p-3 mb-5 bg-white rounded"}
     .card-body
         %h5.card-title.d-flex.justify-content-between
             = complete_name(post.user)
