--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -317,6 +317,12 @@ background-color: #555555 ;
 padding: 10px
 }
 
+// posts
+
+.dashboard-center::-webkit-scrollbar {
+    display: none;
+}
+
 // dog community page
 
 .breed-image {
