--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,7 +11,7 @@
         #navbarSupportedContent.collapse.navbar-collapse
             .navbar-nav.mx-auto.mb-2.mb-lg-0
                 .nav-item
-                    = link_to('Home', dashboard_path, class: "nav-link text-primary", id: 'home_header')
+                    = link_to('Home', root_path, class: "nav-link text-primary", id: 'home_header')
                 .nav-item
                     = link_to('Dog Community', breeds_path, class: "nav-link text-primary")
                 .nav-item
