--- a/app/views/channels/_channel.html.haml
+++ b/app/views/channels/_channel.html.haml
@@ -1,3 +1,5 @@
 - if current_user.user_preferences.include?(channel.name)
-    %div
-        =link_to channel.name, channel
+    = link_to( channel, class: "text-decoration-none text-secondary btn h6 m-0") do
+        .d-flex.align-items-center.text-secondary
+            %i.fa-solid.fa-dog.me-1
+            = channel.name
