--- a/app/views/channels/index.html.haml
+++ b/app/views/channels/index.html.haml
@@ -1,24 +1,9 @@
 .container-fluid.px-3.d-flex.justify-content-center
     .col-md-3
-        %div#chatroom_container.row.bg-dark.text-light
-            %div#side_panel.col-md-4.col-sm-4
+        = render "channels/channel_left_panel"
 
-                %h5
-                    = complete_name(current_user)
-
-                %h4 Friends
-                = turbo_stream_from "users"
-
-                %div#users
-                    = render @users
-
-                %h4 Group Chat
-                = turbo_stream_from "channels"
-
-                %div#channels
-                    = render @channels
-    .col-md-4.bg-secondary.vh-100
-        %div#channel_container.col-md-8.col-sm-8.bg-dark.text-light
+    .col-md-4.vh-100
+        %div#channel_container.col-md-8.col-sm-8.text-light
         - if @single_channel
             %div#single_channel
             %h4.text-center
@@ -28,4 +13,4 @@
                     = render @messages
                 = render 'messages/new_message_form'
     .col-md-3
-        Right
+        = render "channels/channel_right_panel"
