--- a/app/views/pages/_left_panel.html.haml
+++ b/app/views/pages/_left_panel.html.haml
@@ -17,5 +17,5 @@
             - current_user.user_preferences.each do |dog|
                 = link_to( breed_posts_path(Breed.find_by(name: dog).id), class: 'text-decoration-none text-secondary btn h6 m-0') do
                     .d-flex.align-items-center
-                        %i.fa-solid.fa-dog
+                        %i.fa-solid.fa-dog.me-1
                         = dog
