--- a/app/views/channels/_channel_left_panel.html.haml
+++ b/app/views/channels/_channel_left_panel.html.haml
@@ -3,14 +3,14 @@
         Messages
     = link_to( view_profile_path(current_user), class: "text-decoration-none text-secondary btn h6 m-0") do
         .d-flex.align-items-center.text-secondary
-            %i.fa-solid.fa-user{style: 'margin-right: 5px;'}
+            = image_tag(current_user.image_url, class:'chat_pfp')
             = "#{complete_name(current_user)}'s Messages"
     .container.my-3
 
         %h6.mt-2.mb-2.text-secondary Friends
         = turbo_stream_from "users"
 
-        %div#users
+        %div#users.d-flex.flex-column
             = render @users
             
     .container.my-3
@@ -20,5 +20,5 @@
             
         = turbo_stream_from "channels"
 
-        %div#channels
-            = render @channels
+        %div#channels.d-flex.flex-column
+            = render partial: "channels/channel", collection: @pref_channels
