--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -1,7 +1,7 @@
 .container-fluid.px-3.d-flex.justify-content-center
     .col-md-3
         = render 'pages/left_panel'
-    .col-md-4.vh-100.overflow-auto.dashboard-center
+    .col-md-4.vh-100.overflow-auto.center-column
         = turbo_stream_from "posts"
         %div#posts.container
             = render @posts
