--- a/app/views/posts/_edit_post_modal.html.haml
+++ b/app/views/posts/_edit_post_modal.html.haml
@@ -13,7 +13,8 @@
                 %div
                     = form_with(model: [post.breed, post], class: "form-group") do |f|
                         = f.text_field :body, class: "form-control"
-                        = f.submit "Edit Post", class:"btn btn-primary", "data-bs-dismiss" => "modal"
+                        = f.submit "Edit Post", class:"btn btn-primary my-3", "data-bs-dismiss" => "modal"
+                
+            .modal-footer.d-flex.justify-content-between
                 = button_to "Delete Post", breed_post_path(post.breed.id, post.id), method: :delete, class: "btn btn-danger", "data-bs-dismiss" => "modal"
-            .modal-footer
                 %button.btn.btn-secondary{"data-bs-dismiss" => "modal", :type => "button"} Cancel
