--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,4 +1,4 @@
 = link_to( user_message_path(user.id), class: "text-decoration-none text-secondary btn h6 m-0") do
     .d-flex.align-items-center.text-secondary
-        %i.fa-solid.fa-user{style: 'margin-right: 5px;'}
+        = image_tag(user.image_url, class:'chat_pfp')
         = complete_name(user)
