--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,7 +1,7 @@
-.container.mx-2.my-4
+.container.mx-2.my-4{id:"post_#{comment.post.id}_comment_#{comment.id}"}
     .d-flex
         = image_tag(comment.user.image_url, class:'chat_pfp')
-        .card.comment.my-2{id:"post_#{comment.post.id}_comment_#{comment.id}"}
+        .card.comment.my-2
             .card-body.py-1.px-2
                 
                 %h6.card-title.d-flex.justify-content-between.my-0
