--- a/app/views/pages/_right_panel.html.haml
+++ b/app/views/pages/_right_panel.html.haml
@@ -4,7 +4,7 @@
         -unless friend_ids.empty?
             Friends
             .container.my-2
-                - current_user.friends.each do |user|
+                - current_user.friends.where(is_friends: true).each do |user|
                     = link_to( user_message_path(user.friend_id), class: 'text-decoration-none text-secondary btn h6 m-0') do
                         .d-flex.align-items-center
                             = image_tag(Friend.user(user).image_url, class:'chat_pfp')
