--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,8 +3,30 @@
     <h2 class='fw-bolder' style='margin-bottom: 20px;'>Edit <%= resource_name.to_s.humanize %></h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
-      <div class="form-group">
+      <div class='d-flex justify-content-between mb-2'>
+        <div class="form-group">
+          <%= f.text_field :first_name, autocomplete: "off", class: 'form-control', placeholder: "First name", required: true %>
+        </div>
+        <div class="form-group">
+          <%= f.text_field :last_name, autocomplete: "off", class: 'form-control', placeholder: "Last name", required: true %>
+        </div>
+      </div>
+      <div class="form-group mb-2">
         <%= f.email_field :email, class: 'form-control', placeholder: 'Email'  %>
+      </div>
+      <div class="form-group mb-2">
+        <%= f.telephone_field :mobile_number, autocomplete: "off", class: 'form-control', pattern:"[0-9]*", placeholder: "Mobile number", minlength: 11, maxlength: 11, required: true %>
+      </div>
+      <div class="form-group mb-2">
+        <%= f.label :birthdate %>
+        <%= f.date_field :birthdate, class: 'form-control', max:"2004-01-01", min:"1922-01-01" , required: true %>
+      </div>
+      <div class="form-group my-2">
+        <%= f.label :sex, "Gender", class: "", style: "margin-right: 5px;" %>:
+        <%= f.radio_button :sex, "male" %>
+        <%= f.label :female, "Male", style: "margin-right: 5px;" %>
+        <%= f.radio_button :sex, 'female' %>
+        <%= f.label :male, "Female" %>
       </div>
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
